--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -5,6 +5,8 @@ $base-color: #19171a;
 $text-color: #ffffff;
 $subtext-color: #959794;
 $icon-color: #e9322e;
+$KP-color: #ea5d0b;
+$gray-color: #44433e;
 *{
   color: $text-color;
 }
@@ -13,11 +15,19 @@ body{
   background-color: $base-color;
   font-family: 'Play', sans-serif;
 }
+
+.position-fixed{
+  display: flex;
+}
+.menu{
+  padding: 60px 0 0 0;
+}
 .list-group-item{
   background-color: $base-color !important;
   color: $subtext-color !important;
   border-color: $base-color !important;
   font-size: 20px;
+  text-align: center;
 }
 .list-group-item.active{
   background-color: $base-color !important;
@@ -29,8 +39,14 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  @include media-breakpoint-only(xl){
+    padding: 100px 20px 200px;
+  }
   img{
     width: 300px;
+    @include media-breakpoint-only(xl){
+      width: 250px;
+    }
   }
   &__img{
     margin: 0 0 20px 0;
@@ -40,6 +56,9 @@ body{
     color: $text-color;
     font-weight: 700;
     margin: 0 0 10px 0;
+    @include media-breakpoint-only(xl){
+      font-size: 34px;
+    }
   }
   &__post{
     font-size: 16px;
@@ -69,11 +88,69 @@ body{
     }
   }
 }
+.mainBlock{
+  padding: 30px 0 0 20px;
+}
+.title{
+  font-size: 50px;
+  font-weight: 700;
+  text-align: center;
+}
+.year{
+  &__title{
+    color: $icon-color;
+    font-size: 34px;
+    border-top: 2px solid $icon-color;
+    margin: 0 0 10px 0;
+  }
+}
 .film{
+  border-bottom: 1px solid $gray-color;
+  padding: 20px 0;
   &__poster{
     img{
       width: 300px;
       height: 450px;
+      @include media-breakpoint-only(xl){
+        width: 200px;
+        height: 300px;
+      }
     }
+  }
+  &__info{
+    display: flex;
+    flex-direction: column;
+  }
+  &__title{
+    font-size: 30px;
+    text-align: center;
+    color: $text-color;
+    font-weight: 700;
+  }
+  &__link{
+    font-size: 16px;
+    color: $KP-color;
+    text-align: right;
+    text-decoration: none;
+    justify-self: right;
+  }
+  &__director{
+    font-size: 20px;
+    color: $subtext-color;
+    margin: 0 0 25px 0;
+    &:before{
+      content: 'Режиссер: ';
+      color: $icon-color;
+      font-size: 20px;
+      margin: 0 5px 0 0;
+    }
+  }
+  &__description{
+    font-size: 14px;
+    color: $subtext-color;
+    text-indent: 20px;
+  }
+  &:last-child{
+    border-bottom: none;
   }
 }
