--- a/css/style.css
+++ b/css/style.css
@@ -10814,11 +10814,20 @@ body {
   font-family: "Play", sans-serif;
 }
 
+.position-fixed {
+  display: flex;
+}
+
+.menu {
+  padding: 60px 0 0 0;
+}
+
 .list-group-item {
   background-color: #19171a !important;
   color: #959794 !important;
   border-color: #19171a !important;
   font-size: 20px;
+  text-align: center;
 }
 
 .list-group-item.active {
@@ -10833,8 +10842,18 @@ body {
   flex-direction: column;
   align-items: center;
 }
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+  .info {
+    padding: 100px 20px 200px;
+  }
+}
 .info img {
   width: 300px;
+}
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+  .info img {
+    width: 250px;
+  }
 }
 .info__img {
   margin: 0 0 20px 0;
@@ -10844,6 +10863,11 @@ body {
   color: #ffffff;
   font-weight: 700;
   margin: 0 0 10px 0;
+}
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+  .info__name {
+    font-size: 34px;
+  }
 }
 .info__post {
   font-size: 16px;
@@ -10872,9 +10896,72 @@ body {
   left: -38px;
 }
 
+.mainBlock {
+  padding: 30px 0 0 20px;
+}
+
+.title {
+  font-size: 50px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.year__title {
+  color: #e9322e;
+  font-size: 34px;
+  border-top: 2px solid #e9322e;
+  margin: 0 0 10px 0;
+}
+
+.film {
+  border-bottom: 1px solid #44433e;
+  padding: 20px 0;
+}
 .film__poster img {
   width: 300px;
   height: 450px;
+}
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+  .film__poster img {
+    width: 200px;
+    height: 300px;
+  }
+}
+.film__info {
+  display: flex;
+  flex-direction: column;
+}
+.film__title {
+  font-size: 30px;
+  text-align: center;
+  color: #ffffff;
+  font-weight: 700;
+}
+.film__link {
+  font-size: 16px;
+  color: #ea5d0b;
+  text-align: right;
+  text-decoration: none;
+  justify-self: right;
+}
+.film__director {
+  font-size: 20px;
+  color: #959794;
+  margin: 0 0 25px 0;
+}
+.film__director:before {
+  content: "Режиссер: ";
+  color: #e9322e;
+  font-size: 20px;
+  margin: 0 5px 0 0;
+}
+.film__description {
+  font-size: 14px;
+  color: #959794;
+  text-indent: 20px;
+}
+.film:last-child {
+  border-bottom: none;
 }
 
 /*# sourceMappingURL=style.css.map */
