--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -16,11 +16,15 @@ body{
   font-family: 'Play', sans-serif;
 }
 
-.position-fixed{
-  display: flex;
-}
 .menu{
   padding: 60px 0 0 0;
+}
+.list-group{
+  @include media-breakpoint-down(xl){
+    flex-direction: row !important;
+    overflow: scroll !important;
+    -webkit-overflow-scrolling: touch;
+  }
 }
 .list-group-item{
   background-color: $base-color !important;
@@ -39,11 +43,17 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  @include media-breakpoint-down(xl){
+    padding: 100px 0 0;
+  }
   @include media-breakpoint-only(xl){
-    padding: 100px 20px 200px;
+    padding: 150px 15px 300px;
   }
   img{
     width: 300px;
+    @include media-breakpoint-down(xl){
+      width: 400px;
+    }
     @include media-breakpoint-only(xl){
       width: 250px;
     }
@@ -56,6 +66,9 @@ body{
     color: $text-color;
     font-weight: 700;
     margin: 0 0 10px 0;
+    @include media-breakpoint-down(xl){
+      font-size: 45px;
+    }
     @include media-breakpoint-only(xl){
       font-size: 34px;
     }
@@ -64,6 +77,13 @@ body{
     font-size: 16px;
     color: $subtext-color;
     margin: 0 0 100px 0;
+    @include media-breakpoint-down(xl){
+      font-size: 16px;
+      margin: 0 0 20px 0;
+    }
+    @include media-breakpoint-only(xl){
+      font-size: 14px;
+    }
   }
 }
 .contacts{
@@ -88,8 +108,28 @@ body{
     }
   }
 }
+.leftBlock{
+  &__position{
+    @include media-breakpoint-up(xl){
+      position: fixed;
+    }
+  }
+}
 .mainBlock{
   padding: 30px 0 0 20px;
+}
+.rightBlock{
+  @include media-breakpoint-down(xl){
+    position: fixed;
+    bottom: 0;
+    left: 0;
+  }
+  &__position{
+
+    @include media-breakpoint-up(xl){
+      position: fixed;
+    }
+  }
 }
 .title{
   font-size: 50px;
@@ -107,19 +147,24 @@ body{
 .film{
   border-bottom: 1px solid $gray-color;
   padding: 20px 0;
+  display: flex;
+
   &__poster{
+    flex: 0 1 33.333%;
     img{
       width: 300px;
       height: 450px;
       @include media-breakpoint-only(xl){
-        width: 200px;
-        height: 300px;
+        width: 250px;
+        height: 375px;
       }
     }
   }
   &__info{
+    flex: 0 1 66.666%;
     display: flex;
     flex-direction: column;
+    padding: 0 20px 0 0;
   }
   &__title{
     font-size: 30px;
