--- a/css/style.css
+++ b/css/style.css
@@ -10814,12 +10814,16 @@ body {
   font-family: "Play", sans-serif;
 }
 
-.position-fixed {
-  display: flex;
-}
-
 .menu {
   padding: 60px 0 0 0;
+}
+
+@media (max-width: 1199.98px) {
+  .list-group {
+    flex-direction: row !important;
+    overflow: scroll !important;
+    -webkit-overflow-scrolling: touch;
+  }
 }
 
 .list-group-item {
@@ -10842,13 +10846,23 @@ body {
   flex-direction: column;
   align-items: center;
 }
+@media (max-width: 1199.98px) {
+  .info {
+    padding: 100px 0 0;
+  }
+}
 @media (min-width: 1200px) and (max-width: 1399.98px) {
   .info {
-    padding: 100px 20px 200px;
+    padding: 150px 15px 300px;
   }
 }
 .info img {
   width: 300px;
+}
+@media (max-width: 1199.98px) {
+  .info img {
+    width: 400px;
+  }
 }
 @media (min-width: 1200px) and (max-width: 1399.98px) {
   .info img {
@@ -10864,6 +10878,11 @@ body {
   font-weight: 700;
   margin: 0 0 10px 0;
 }
+@media (max-width: 1199.98px) {
+  .info__name {
+    font-size: 45px;
+  }
+}
 @media (min-width: 1200px) and (max-width: 1399.98px) {
   .info__name {
     font-size: 34px;
@@ -10873,6 +10892,17 @@ body {
   font-size: 16px;
   color: #959794;
   margin: 0 0 100px 0;
+}
+@media (max-width: 1199.98px) {
+  .info__post {
+    font-size: 16px;
+    margin: 0 0 20px 0;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+  .info__post {
+    font-size: 14px;
+  }
 }
 
 .contacts {
@@ -10896,8 +10926,27 @@ body {
   left: -38px;
 }
 
+@media (min-width: 1200px) {
+  .leftBlock__position {
+    position: fixed;
+  }
+}
+
 .mainBlock {
   padding: 30px 0 0 20px;
+}
+
+@media (max-width: 1199.98px) {
+  .rightBlock {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .rightBlock__position {
+    position: fixed;
+  }
 }
 
 .title {
@@ -10916,6 +10965,10 @@ body {
 .film {
   border-bottom: 1px solid #44433e;
   padding: 20px 0;
+  display: flex;
+}
+.film__poster {
+  flex: 0 1 33.333%;
 }
 .film__poster img {
   width: 300px;
@@ -10923,13 +10976,15 @@ body {
 }
 @media (min-width: 1200px) and (max-width: 1399.98px) {
   .film__poster img {
-    width: 200px;
-    height: 300px;
+    width: 250px;
+    height: 375px;
   }
 }
 .film__info {
+  flex: 0 1 66.666%;
   display: flex;
   flex-direction: column;
+  padding: 0 20px 0 0;
 }
 .film__title {
   font-size: 30px;
