changed photo width to sm screens

--- a/css/style.css
+++ b/css/style.css
@@ -10885,6 +10885,11 @@ body {
     flex-direction: column;
   }
 }
+@media (max-width: 575.98px) {
+  .info {
+    padding: 10px 0 0;
+  }
+}
 .info__flex {
   display: flex;
   flex-direction: column;
@@ -10903,7 +10908,7 @@ body {
 }
 @media (max-width: 575.98px) {
   .info img {
-    width: 200px;
+    width: 300px;
   }
 }
 @media (min-width: 1200px) {
@@ -10917,6 +10922,11 @@ body {
 @media (max-width: 1199.98px) {
   .info__img {
     margin: 0 40px 0 20px;
+  }
+}
+@media (max-width: 575.98px) {
+  .info__img {
+    margin: 0;
   }
 }
 .info__name {
