--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -73,6 +73,9 @@ body{
   @include media-breakpoint-down(md){
     flex-direction: column;
   }
+  @include media-breakpoint-down(sm){
+    padding: 10px 0 0;
+  }
   &__flex{
     display: flex;
     flex-direction: column;
@@ -88,7 +91,7 @@ body{
       width: 400px;
     }
     @include media-breakpoint-down(sm){
-      width: 200px;
+      width: 300px;
     }
     @include media-breakpoint-up(xl){
       width: 280px;
@@ -98,6 +101,9 @@ body{
     margin: 0 0 20px 0;
     @include media-breakpoint-down(xl){
       margin: 0 40px 0 20px;
+    }
+    @include media-breakpoint-down(sm){
+      margin: 0;
     }
   }
   &__name{
